mess with generics on collection converter